; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/igc/extr_igc_main.c_igc_write_itr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/igc/extr_igc_main.c_igc_write_itr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.igc_q_vector = type { i32, i64, i32 }

@IGC_QVECTOR_MASK = common dso_local global i32 0, align 4
@IGC_ITR_VAL_MASK = common dso_local global i32 0, align 4
@IGC_EITR_CNT_IGNR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.igc_q_vector*)* @igc_write_itr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @igc_write_itr(%struct.igc_q_vector* %0) #0 {
  %2 = alloca %struct.igc_q_vector*, align 8
  %3 = alloca i32, align 4
  store %struct.igc_q_vector* %0, %struct.igc_q_vector** %2, align 8
  %4 = load %struct.igc_q_vector*, %struct.igc_q_vector** %2, align 8
  %5 = getelementptr inbounds %struct.igc_q_vector, %struct.igc_q_vector* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = load i32, i32* @IGC_QVECTOR_MASK, align 4
  %8 = and i32 %6, %7
  store i32 %8, i32* %3, align 4
  %9 = load %struct.igc_q_vector*, %struct.igc_q_vector** %2, align 8
  %10 = getelementptr inbounds %struct.igc_q_vector, %struct.igc_q_vector* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  br label %30

14:                                               ; preds = %1
  %15 = load i32, i32* %3, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %14
  %18 = load i32, i32* @IGC_ITR_VAL_MASK, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %17, %14
  %20 = load i32, i32* @IGC_EITR_CNT_IGNR, align 4
  %21 = load i32, i32* %3, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %3, align 4
  %23 = load i32, i32* %3, align 4
  %24 = load %struct.igc_q_vector*, %struct.igc_q_vector** %2, align 8
  %25 = getelementptr inbounds %struct.igc_q_vector, %struct.igc_q_vector* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @writel(i32 %23, i32 %26)
  %28 = load %struct.igc_q_vector*, %struct.igc_q_vector** %2, align 8
  %29 = getelementptr inbounds %struct.igc_q_vector, %struct.igc_q_vector* %28, i32 0, i32 1
  store i64 0, i64* %29, align 8
  br label %30

30:                                               ; preds = %19, %13
  ret void
}

declare dso_local i32 @writel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
